# iSdiGenerator

./: .gitignore  README.md  idigenerator.code-workspace  setup.cfg  setup.py
iSdiGenerator/: main.py
iSdiGenerator/builder/: SdiBuilderBase.py  SdiInterfaceBuilder.py  SdiStructBuilder.py
iSdiGenerator/common/: SdiAppAction.py  SdiArgumentsChecker.py  SdiErrno.py  SdiErrorsCollector.py  SdiRegexConstants.py  SdiStruct.py
iSdiGenerator/parser/: SdiInterfaceParser.py  SdiInterfacePropertiesParser.py  SdiParserBase.py  SdiStructParser.py
iSdiGenerator/test/sdifiles/: test1.sdi  test2.sdi  test3.sdi  test4.sdi
share/libSdi/: SdiNumber.hpp  SdiNumberGuard.hpp  SdiReflectionBase.hpp  SdiReflectionMember.hpp  SdiReflectionMemberBase.hpp
share/templates/: attribute_hpp.py_template  interface.py_template  interface_cpp.py_template  interface_hpp.py_template  methods_hpp.py_template  methods_registration_cpp.py_template  struct.py_template  struct_cpp.py_template  struct_hpp.py_template
src/: SdiArgumentsChecker.py  SdiErrorsCollector.py  SdiInterfaceBuilder.py  SdiInterfaceParser.py  SdiRegexConstants.py  iSdiGenerator.py
src/iSdiGenerator/: SdiArgumentsChecker.py  SdiBuilderBase.py  SdiErrorsCollector.py  SdiInterfaceBuilder.py  SdiInterfaceParser.py  SdiInterfacePropertiesParser.py  SdiParserBase.py  SdiRegexConstants.py  SdiStruct.py  SdiStructBuilder.py  SdiStructParser.py  iSdiGenerator.py
