[metadata]
name = iSdiGenerator
version = 0.0.1
author = ArAmIuS de Rotterdam
author_email = bchowa@gmail.com
description = 
    iSdiGenerator is a tool to generate a C++ class which represents an 
    interface.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aramius-rotterdam/iSdiGenerator
project_urls =
    Bug Tracker = https://github.com/aramius-rotterdam/iSdiGenerator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src