[metadata]
name = iSdiGenerator
version = 0.0.4
author = ArAmIuS de Rotterdam
author_email = bchowa@gmail.com
description = iSdiGenerator is a tool to generate a C++ class which represents an interface.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/aramius-rotterdam/iSdiGenerator
project_urls =
    Bug Tracker = https://github.com/aramius-rotterdam/iSdiGenerator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = iSdiGenerator, iSdiGenerator.builder, iSdiGenerator.common, iSdiGenerator.parser
scripts= bin/iSdiGenerator
python_requires = >=3.6

[options.packages.find]
where = iSdiGenerator

[options.data_files]
/usr/local/share/isdigenerator/templates = share/templates/attribute_hpp.py_template, share/templates/interface_hpp.py_template, share/templates/methods_hpp.py_template, share/templates/struct_hpp.py_template
/usr/local/share/isdigenerator/libSdi = share/libSdi/SdiNumber.hpp, share/libSdi/SdiNumberGuard.hpp